--- a/app/src/main/res/drawable/custom_button_normal.xml
+++ b/app/src/main/res/drawable/custom_button_normal.xml
@@ -1,4 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <padding
+        android:bottom="15dp"
+        android:left="7dp"
+        android:right="7dp"
+        android:top="15dp" />
+    <gradient
+        android:angle="90"
+        android:endColor="#61ade2"
+        android:startColor="#2c6cba"
+        android:type="linear" />
+    <stroke
+        android:width="1dip"
+        android:color="#4e97ce" />
+    <corners android:radius="8dp" />
+</shape>
