--- a/app/src/main/res/layout/activity_ingredient.xml
+++ b/app/src/main/res/layout/activity_ingredient.xml
@@ -5,16 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/fifteen"
+    android:orientation="vertical"
     android:paddingLeft="@dimen/ten"
+    android:gravity="center"
     android:paddingRight="@dimen/ten"
     android:paddingTop="@dimen/fifteen"
     tools:context="youtubeapidemo.examples.com.bakingapp.IngredientActivity">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:layout_gravity="center"
-        android:elevation="2dp"
+        app:elevation="2dp"
         app:cardCornerRadius="4dp">
 
         <LinearLayout
@@ -32,6 +35,15 @@
                 android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
+
         </LinearLayout>
     </android.support.v7.widget.CardView>
+    <Button
+        android:id="@+id/main_custom_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Custom Button"
+        android:textColor="#ffffff"
+        android:background="@drawable/custom_button_selector" />
+
 </LinearLayout>
