--- a/app/src/main/res/drawable/custom_button_normal.xml
+++ b/app/src/main/res/drawable/custom_button_normal.xml
@@ -8,11 +8,11 @@
         android:top="15dp" />
     <gradient
         android:angle="90"
-        android:endColor="#61ade2"
-        android:startColor="#2c6cba"
+        android:endColor="@color/colorPrimary"
+        android:startColor="@color/colorPrimary"
         android:type="linear" />
     <stroke
         android:width="1dip"
-        android:color="#4e97ce" />
+        android:color="@color/colorPrimary" />
     <corners android:radius="8dp" />
 </shape>
