--- a/app/src/main/res/drawable/custom_button_selected.xml
+++ b/app/src/main/res/drawable/custom_button_selected.xml
@@ -7,12 +7,12 @@
         android:right="7dp"
         android:bottom="15dp" />
     <gradient
-        android:startColor="#10429c"
-        android:endColor="#3c7fc6"
+        android:startColor="@color/colorPrimaryDark"
+        android:endColor="@color/colorPrimaryDark"
         android:type="linear"
         android:angle="90"/>
     <stroke
         android:width="1dip"
-        android:color="#4e97ce" />
+        android:color="@color/colorPrimary" />
     <corners android:radius="8dp" />
 </shape>
