--- a/app/src/main/res/layout/activity_ingredient.xml
+++ b/app/src/main/res/layout/activity_ingredient.xml
@@ -9,6 +9,7 @@
     android:paddingLeft="@dimen/ten"
     android:gravity="center"
     android:paddingRight="@dimen/ten"
+    android:background="#FFF9C4"
     android:paddingTop="@dimen/fifteen"
     tools:context="youtubeapidemo.examples.com.bakingapp.IngredientActivity">
 
@@ -16,8 +17,10 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:layout_marginBottom="10dp"
         android:layout_gravity="center"
-        app:elevation="2dp"
+        app:cardElevation="2dp"
+
         app:cardCornerRadius="4dp">
 
         <LinearLayout
@@ -28,21 +31,24 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="6dp"
                 android:text="@string/ingredients_head"
                 android:textSize="25sp" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycler_view"
+                android:padding="6dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
     <Button
-        android:id="@+id/main_custom_button"
+        android:id="@+id/cook_custom_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Custom Button"
+        android:text="Start Cooking"
+        android:textAllCaps="true"
         android:textColor="#ffffff"
         android:background="@drawable/custom_button_selector" />
 
