--- a/app/src/main/res/layout/card_recycler_view_item.xml
+++ b/app/src/main/res/layout/card_recycler_view_item.xml
@@ -1,49 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<!-- A CardView that contains a TextView -->
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
-    <!-- A CardView that contains a TextView -->
-    <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
+    android:layout_gravity="center"
+    app:cardCornerRadius="4dp"
+    app:cardElevation="2dp">
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        app:cardCornerRadius="4dp"
-        app:elevation="2dp">
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:gravity="center"
+            android:textAllCaps="true"
+            android:textSize="30sp"
+            android:textStyle="bold|italic"
+            tools:text="@string/Rasgulla" />
 
         <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="40dp">
 
+          <!--  <ImageView
+                a
+                android:layout_width="40dp"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_room_service_black_24dp" />
+-->
             <TextView
-                android:id="@+id/title"
-                tools:text="@string/Rasgulla"
+                android:id="@+id/serving"
+                tools:text="8 Servings"
+                android:paddingLeft="7dp"
+                android:paddingStart="7dp"
+                android:paddingRight="7dp"
+                android:paddingEnd="7dp"
+                android:layout_width="match_parent"
                 android:gravity="center"
-                android:textSize="30sp"
-                android:textAllCaps="true"
-                android:layout_width="match_parent"
-                android:layout_height="70dp" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="40dp">
-
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:src="@drawable/ic_room_service_black_24dp" />
-
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:src="@drawable/ic_favorite_border_black_24dp" />
-            </LinearLayout>
+                android:layout_height="match_parent"
+                />
         </LinearLayout>
-    </android.support.v7.widget.CardView>
-</LinearLayout>
+    </LinearLayout>
+</android.support.v7.widget.CardView>
